[package]
name = "anna"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.14", features = ["derive"] }
libsql-client = "0.33.2"
uuid = { version = "1.6.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
